# omnigent

./: .pre-commit-config.yaml  README.md  openapi.json  pyproject.toml  setup.py
.github/workflows/: e2e-ui.yml  e2e.yml  oss-publish-images.yml  oss-regen-on-comment.yml  oss-regenerate-and-smoke.yml  oss-scorecard.yml  polly-review.yml  release-omnigent.yml
ap-web/: package-lock.json  package.json
ap-web/electron/: package-lock.json  package.json
ap-web/src/: embed.tsx  index.css  index.css.test.ts
designs/: issue-triage-proposal.md
docs/: AGENT_YAML_SPEC.md
examples/polly/: config.yaml
omnigent/: chat.py  claude_native.py  cli.py  cli_diagnostics.py  harness_aliases.py  model_override.py  update_check.py
omnigent/db/: db_models.py
omnigent/entities/: conversation.py
omnigent/host/: local_server.py
omnigent/inner/: bwrap_sandbox.py  claude_sdk_executor.py  cursor_executor.py  gemini_executor.py  gemini_harness.py  gemini_mcp_server.py  hermes_executor.py  sandbox.py  seatbelt_sandbox.py  terminal.py
omnigent/onboarding/: configure_models.py  databricks_config.py  harness_install.py  harness_readiness.py  provider_config.py
omnigent/repl/: _repl.py
omnigent/runner/: app.py  environment_filesystem.py  resource_registry.py  tool_dispatch.py
omnigent/runtime/: workflow.py
omnigent/sandbox/: __init__.py
omnigent/server/: API.md  schemas.py
omnigent/spec/: AGENTSPEC.md  _omnigent_compat.py  omnigent.py
scripts/: install_oss.sh
sdks/ui/: pyproject.toml
tests/: known_failures.yaml  test_claude_native.py  test_harness_aliases.py
(+106 files in other folders)
